adjusted blog layout on ipad, fixed navbar layout issues on ipad

--- a/public/_blog/_sass/hydeout/_variables.scss
+++ b/public/_blog/_sass/hydeout/_variables.scss
@@ -35,7 +35,7 @@ $section-spacing: 2rem !default;
 $sidebar-width: 18rem !default;
 
 $medium-breakpoint: 35rem !default;
-$large-breakpoint: 60rem !default;
+$large-breakpoint: 55rem !default;
 $large-font-size: 1.25rem !default;
 
 $box-shadow-size: 1px !default;
