--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,11 +194,10 @@ h6 {
 @media(max-width: 1024px) {
   .navbar {
     padding-left: constant(safe-area-inset-left);
-    padding-left: env(safe-area-inset-left);
+    padding-left: max(16px, env(safe-area-inset-left));
   }
   .parallax {
     min-height: 275px;
-    background-attachment: scroll;
   }
   #parallax2 {
     background-position: center;
